Changes for upcoming closures, new data version