@@ -4,6 +4,7 @@ import com.tramchester.config.GraphDBConfig;
 import com.tramchester.config.RemoteDataSourceConfig;
 import com.tramchester.config.TemporaryStationsWalkIds;
 import com.tramchester.domain.StationClosures;
+import com.tramchester.domain.StationIdPair;
 import com.tramchester.integration.testSupport.TestGroupType;
 import com.tramchester.integration.testSupport.naptan.NaptanRemoteDataSourceTestConfig;
 import com.tramchester.integration.testSupport.nptg.NPTGDataSourceTestConfig;
@@ -16,6 +17,10 @@ import com.tramchester.testSupport.TestEnv;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
+
+import static com.tramchester.testSupport.UpcomingDates.MediaCityToImperialWarMus;
+import static com.tramchester.testSupport.reference.TramStations.ImperialWarMuseum;
+import static com.tramchester.testSupport.reference.TramStations.MediaCityUK;
 
 public abstract class IntegrationTestConfig extends TestConfig {
 
@@ -56,7 +61,9 @@ public abstract class IntegrationTestConfig extends TestConfig {
      *         end: 2025-08-10
      */
 
-    public static final List<TemporaryStationsWalkIds> CurrentStationWalks = Collections.emptyList();
+    public static final List<TemporaryStationsWalkIds> CurrentStationWalks = List.of(
+                    new TemporaryStationsWalkConfigForTest(StationIdPair.of(MediaCityUK, ImperialWarMuseum),
+                            MediaCityToImperialWarMus));
 
     // EXAMPLE
 //            List.of(
